# mcp-protocol-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  dune-project  mcp_protocol.opam  mcp_protocol_eio.opam  mcp_protocol_http.opam
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml  question.yml
.github/workflows/: ci.yml
conformance/: README.md
docs/: INSTALL-CHECKLIST.md  MCP-TEMPLATE.md  RELEASE-POLICY.md  SETUP.md
docs/plans/: 2026-03-07-v0.7.0-server-to-client-design.md  2026-03-07-v0.8.0-hardening.md
eio/: client.ml  client.mli  dune  generic_client.ml  generic_client.mli  generic_server.ml  generic_server.mli  handler.ml  handler.mli  memory_transport.ml  memory_transport.mli  middleware.ml  middleware.mli  resilience.ml  resilience.mli  server.ml  server.mli  stdio_transport.ml  stdio_transport.mli  task_store.ml  task_store.mli  time_compat.ml  time_compat.mli
examples/: conformance_server.ml  dune  echo_client.ml  echo_server.ml  http_auth_server.ml  http_echo_client.ml  http_echo_server.ml  note_server.ml
http/: auth_middleware.ml  auth_middleware.mli  dune  http_client.ml  http_client.mli  http_limits.ml  http_limits.mli  http_server.ml  http_server.mli  http_session.ml  http_session.mli  oauth_client.ml  oauth_client.mli  sse.ml  sse.mli  sse_flow.ml  sse_flow.mli  tls_helpers.ml  tls_helpers.mli
lib/: auth.ml  auth.mli  defaults.ml  defaults.mli  dune  error_codes.ml  error_codes.mli  http_negotiation.ml  http_negotiation.mli  jsonrpc.ml  jsonrpc.mli  logging.ml  logging.mli  mcp_error.ml  mcp_error.mli  mcp_protocol.ml  mcp_protocol.mli  mcp_result.ml  mcp_result.mli  mcp_types.ml  mcp_types.mli  mcp_types_completion.ml  mcp_types_completion.mli  mcp_types_elicitation.ml  mcp_types_elicitation.mli  mcp_types_tasks.ml  mcp_types_tasks.mli  notifications.ml  notifications.mli  pagination.ml  pagination.mli  protocol.ml  protocol.mli  resources.ml  resources.mli  result_extra.ml  result_extra.mli  sampling.ml  sampling.mli  session.ml  (+7 more)
scripts/: check-release-metadata.sh  run-conformance.sh
test/: dune  test_auth.ml  test_backward_compat.ml  test_bug_fixes.ml  test_client.ml  test_e2e_memory.ml  test_error_codes.ml  test_generic_server.ml  test_handler.ml  test_http_client.ml  test_http_integration.ml  test_http_negotiation.ml  test_http_server.ml  test_http_session.ml  test_integration.ml  test_jsonrpc.ml  test_logging.ml  test_mcp_error.ml  test_mcp_result.ml  test_mcp_types.ml  test_memory_transport.ml  test_notifications.ml  test_oauth_client.ml  test_oauth_discovery.ml  test_ppx_schema.ml  test_sampling.ml  test_server.ml  test_session.ml  test_sse.ml  test_sse_flow.ml  test_stdio_transport.ml  test_task_lifecycle.ml  test_tasks.ml  test_tool_arg.ml  test_version.ml
