(tests
 (names
  test_jsonrpc
  test_mcp_types
  test_error_codes
  test_mcp_error
  test_version
  test_http_negotiation
  test_session
  test_mcp_result
  test_logging
  test_sampling
  test_backward_compat
  test_notifications)
 (libraries mcp_protocol alcotest))

(tests
 (names test_stdio_transport test_server test_client test_integration)
 (libraries mcp_protocol mcp_protocol_eio eio eio.unix eio_main alcotest yojson))

(tests
 (names test_sse test_http_session)
 (libraries mcp_protocol_http eio eio_main alcotest))

(tests
 (names test_http_server)
 (libraries mcp_protocol mcp_protocol_eio mcp_protocol_http
  eio eio.unix eio_main cohttp-eio alcotest yojson))
